# finalwithgraphics

./: CMakeLists.txt  diesel.cpp  diesel.h  engine.cpp  engine.h  fourstroke.cpp  fourstroke.h  graphoutputwidget.cpp  graphoutputwidget.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  osgwidget.cpp  osgwidget.h  otto.cpp  otto.h
